fix: never rename or wildcard-import a type the file itself declares
A file-declared type (top-level or nested class/interface/enum/record)
shadows an on-demand import of a same-named vanilla class, exactly as
javac treats it. The rewriter previously ignored that: scanning a
wildcard package for "used" simple names matched a class's own
declaration line as a usage, so this mod's datagen.Models collided
with vanilla net.minecraft.client.data.Models (-> Mojang
ModelTemplates) — the tool imported ModelTemplates and renamed the
mod's own class and constructor to match, leaving Models.java both
importing and declaring the same simple name and orphaning the
Models::new call site in RocksDataGen.java.

Collect declared simple names up front and exclude them from
simple_renames, nested_renames, and wildcard expansion. Adds a
regression test; all 14 tests pass under stdlib unittest.